tests/negative/bad_syntax_missing_brace.xs
-- EXPECT_ERROR
fn f() {
    return 1
